Added setup for Travis CI

--- a/jsocket/pom.xml
+++ b/jsocket/pom.xml
@@ -4,9 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>jsocket</groupId>
+    <groupId>com.jsock</groupId>
     <artifactId>jsocket</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
+    <version>0.4.1-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
