--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,5 @@
+sudo: false
 language: java
 jdk:
   - oraclejdk8
-  - oraclejdk7
-  - openjdk7
-  - openjdk6
-mvn install -DskipTests=true
+before_install: mvn install -DskipTests=true
