--- a/jsocket/pom.xml
+++ b/jsocket/pom.xml
@@ -13,6 +13,10 @@
             <artifactId>gson</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.9</version>
+        </dependency>
     </dependencies>
-
 </project>
