--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 sudo: false
 language: java
-before_install: cd jsocket; mvn install
+before_install: cd jsocket; mvn install -DskipTests=true
 script: mvn test
