--- a/jsocket/pom.xml
+++ b/jsocket/pom.xml
@@ -4,11 +4,45 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.czifrodevelopment.jsocket</groupId>
+    <groupId>com.czifrotech.jsocket</groupId>
     <artifactId>jsocket</artifactId>
     <packaging>jar</packaging>
     <name>JSocket</name>
-    <version>0.4.2</version>
+    <version>0.4.2-SNAPSHOT</version>
+
+    <distributionManagement>
+        <repository>
+            <id>czifrotech</id>
+            <name>JSocket builds</name>
+            <url>scp://jsocket-maven@ftp.maven.czifrotech.com/var/www/czifrotech/maven/jsocket</url>
+        </repository>
+    </distributionManagement>
+
+    <build>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ssh</artifactId>
+                <version>2.8</version>
+            </extension>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ssh-external</artifactId>
+                <version>2.8</version>
+            </extension>
+        </extensions>
+    </build>
+
+    <repositories>
+        <repository>
+            <id>JSocket-mvn-repo</id>
+            <url>scp://jsocket-maven@maven.czifrotech.com</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <licenses>
         <license>
