--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,20 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.9</version>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.10.19</version>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <!-- use 3.2.0 for Java 8 projects -->
+            <version>3.2.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
