--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ jdk:
   - oraclejdk8
 before_install: mvn install -DskipTests=true
 script: mvn test
-after_install: python mvn_deploy_script.py
+after_success: python mvn_deploy_script.py
