--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.czifrotech.jsocket</groupId>
+    <groupId>jsocket</groupId>
     <artifactId>jsocket</artifactId>
     <packaging>jar</packaging>
     <name>jsocket</name>
-    <version>0.5.0-SNAPSHOT</version>
+    <version>0.5.0-beta-3-SNAPSHOT</version>
     <licenses>
         <license>
             <name>MIT License</name>
@@ -25,13 +25,17 @@
     </developers>
     <distributionManagement>
         <snapshotRepository>
-            <id>sonatype-nexus-staging</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <id>snapshots</id>
+            <url>http://45.55.49.123:8081/nexus/content/repositories/snapshots</url>
         </snapshotRepository>
-        <!--<repository>-->
-        <!--<id>sonatype</id>-->
-        <!--<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>-->
-        <!--</repository>-->
+        <repository>
+            <id>staging</id>
+            <url>http://45.55.49.123:8081/nexus/content/repositories/staging</url>
+        </repository>
+        <repository>
+            <id>releases</id>
+            <url>http://45.55.49.123:8081/nexus/content/repositories/releases</url>
+        </repository>
     </distributionManagement>
     <build>
         <plugins>
