--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,10 @@
             <id>staging</id>
             <url>http://45.55.49.123:8081/nexus/content/repositories/staging</url>
         </repository>
-        <repository>
-            <id>releases</id>
-            <url>http://45.55.49.123:8081/nexus/content/repositories/releases</url>
-        </repository>
+        <!--<repository>-->
+            <!--<id>releases</id>-->
+            <!--<url>http://45.55.49.123:8081/nexus/content/repositories/releases</url>-->
+        <!--</repository>-->
     </distributionManagement>
     <build>
         <plugins>
@@ -58,13 +58,14 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>4.9</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>1.10.19</version>
+            <version>2.2.21</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
