--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>jsocket</artifactId>
     <packaging>jar</packaging>
     <name>jsocket</name>
-    <version>0.5.0</version>
+    <version>0.5.0-beta-3-SNAPSHOT</version>
     <licenses>
         <license>
             <name>MIT License</name>
@@ -58,4 +58,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-</project>
+<distributionManagement><snapshotRepository><id>snapshots</id><url>http://45.55.49.123:8081/nexus/content/repositories/snapshots</url></snapshotRepository></distributionManagement></project>
