--- a/pom.xml
+++ b/pom.xml
@@ -58,4 +58,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-<distributionManagement><snapshotRepository><id>snapshots</id><url>http://45.55.49.123:8081/nexus/content/repositories/snapshots</url></snapshotRepository></distributionManagement></project>
+</project>
