--- a/pom.xml
+++ b/pom.xml
@@ -49,26 +49,26 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.3.1</version>
+            <version>2.8.0</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.9</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>2.2.21</version>
+            <version>2.7.22</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <!-- use 3.2.0 for Java 8 projects -->
-            <version>3.2.0</version>
+            <version>3.6.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
-<distributionManagement><snapshotRepository><id>snapshots</id><url>http://45.55.49.123:8081/nexus/content/repositories/snapshots</url></snapshotRepository></distributionManagement></project>
+</project>
